# rv32i-on-analogue-pocket

./: .gitignore  CMakeLists.txt  Makefile  README.md  SConstruct  build.sh  build_riscv-tests.sh  clean.sh  pack.sh  run_tb.sh  upload.sh
src/: ap_core.qsf  config.toml  core_top.v  display.sv
src/apf/: build_id.mif
src/assets/: info.txt
src/core/: core_top.v
src/output_files/: ap_core.jdi  ap_core.rbf  bitstream.rbf_r
src/rtl/: decoder.sv  define.sv
src/rtl/rv32i/: alu.sv  csr_alu.sv  csr_registers.sv  decoder.sv  psram.sv  ram.sv  ram_mask.sv  reg_mask.sv  register.sv  registers.sv  rom.sv  rom_cache.sv  rv32i.sv  rv32i_top.sv  rv32i_top.sv.back  rv32i_top_wrapper.sv
test_bench/verilator/: tb_decoder.cpp  tb_decoder.hpp
test_bench/verilator/rv32i/: tb_alu.cpp  tb_csr_alu.cpp  tb_csr_registers.cpp  tb_decoder.cpp  tb_psram.cpp  tb_ram.cpp  tb_ram_mask.cpp  tb_reg_mask.cpp  tb_registers.cpp  tb_rom.cpp  tb_rom_cache.cpp  tb_rv32i_top.cpp  tb_rv32i_top_wrapper.cpp
vcd/: rv32ui-p-add.gtkw  rv32ui-p-auipc.gtkw  rv32ui-p-lb.gtkw  rv32ui-p-lh.gtkw  rv32ui-p-ma_data.gtkw  rv32ui-p-sb.gtkw  rv32ui-p-sw.gtkw
vcd_defs/: alu_input1.txt  alu_input2.txt  alu_op.txt  branch_type.txt  opcode.txt  optype.txt  pc_input.txt  ram_mask.txt  reg_mask.txt  wb_from.txt
